--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.4",
     "next-intl": "^4.7.0",
+    "next-themes": "^0.4.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0"
